welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: value lenhth is not a member of Array[Int]
    if (i+1<=nums.lenhth-1 && nums(i+1)==valeur){
                  ^noTriples:5: error: value lenhth is not a member of Array[Int]
      if (i+2<=nums.lenhth-1 && nums(i+2)==valeur){
                    ^